--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,117 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <style>
+        body,
+        html {
+          padding: 0;
+          margin: 0;
+          font-size: 100%;
+          -webkit-text-size-adjust: 100%;
+          -ms-text-size-adjust: 100%;
+        }
+        .loading-container {
+          box-sizing: border-box;
+          height: 100vh;
+          overflow: hidden;
+          display: grid;
+          place-content: center;
+        }
+
+        .loader {
+          transform: rotateZ(45deg);
+          perspective: 1000px;
+          border-radius: 50%;
+          width: 48px;
+          height: 48px;
+          color: #ef51e7;
+        }
+
+        .loader:before,
+        .loader:after {
+          content: '';
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: inherit;
+          height: inherit;
+          border-radius: 50%;
+          transform: rotateX(70deg);
+          animation: 1s spin linear infinite;
+        }
+
+        .loader:after {
+          color: #644bf3;
+          transform: rotateY(70deg);
+          animation-delay: 0.4s;
+        }
+        .loading-text {
+          margin-top: 20px;
+        }
+
+        @keyframes rotate {
+          0% {
+            transform: translate(-50%, -50%) rotateZ(0deg);
+          }
+
+          100% {
+            transform: translate(-50%, -50%) rotateZ(360deg);
+          }
+        }
+
+        @keyframes rotateccw {
+          0% {
+            transform: translate(-50%, -50%) rotate(0deg);
+          }
+
+          100% {
+            transform: translate(-50%, -50%) rotate(-360deg);
+          }
+        }
+
+        @keyframes spin {
+          0%,
+          100% {
+            box-shadow: 0.2em 0px 0 0px currentcolor;
+          }
+
+          12% {
+            box-shadow: 0.2em 0.2em 0 0 currentcolor;
+          }
+
+          25% {
+            box-shadow: 0 0.2em 0 0px currentcolor;
+          }
+
+          37% {
+            box-shadow: -0.2em 0.2em 0 0 currentcolor;
+          }
+
+          50% {
+            box-shadow: -0.2em 0 0 0 currentcolor;
+          }
+
+          62% {
+            box-shadow: -0.2em -0.2em 0 0 currentcolor;
+          }
+
+          75% {
+            box-shadow: 0px -0.2em 0 0 currentcolor;
+          }
+
+          87% {
+            box-shadow: 0.2em -0.2em 0 0 currentcolor;
+          }
+        }
+      </style>
+      <div class="loading-container">
+        <div class="loader"></div>
+        <div class="loading-text">Loading...</div>
+      </div>
+      <!-- Container -->
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
